@@ -23,6 +23,7 @@
 #ifndef kjs_binding_h
 #define kjs_binding_h
 
+#include <kjs/function.h>
 #include <kjs/lookup.h>
 #include <wtf/Noncopyable.h>
 
